--- a/app/src/main/res/drawable-anydpi/back_arrow.xml
+++ b/app/src/main/res/drawable-anydpi/back_arrow.xml
@@ -3,9 +3,14 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#11042E"
+    android:tint="#FFFFFF"
     android:alpha="0.8">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
+  <group android:scaleX="1.2"
+      android:scaleY="1.2"
+      android:translateX="4.8"
+      android:translateY="-2.4">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M11.67,3.87L9.9,2.1 0,12l9.9,9.9 1.77,-1.77L3.54,12z"/>
+  </group>
 </vector>
