--- a/app/src/main/res/layout-v26/action_bar_active_course.xml
+++ b/app/src/main/res/layout-v26/action_bar_active_course.xml
@@ -19,9 +19,9 @@
     <TextView
         android:id="@+id/textCourseNameActiveCourse"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="5dp"
-        android:textSize="18sp"
+        android:autoSizeTextType="uniform"
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
         android:text="@string/course_name"
