--- a/app/src/main/res/layout/action_bar_explore_courses.xml
+++ b/app/src/main/res/layout/action_bar_explore_courses.xml
@@ -4,9 +4,9 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorPrimary">
+    android:background="@color/transparent">
     <ImageButton
-        android:id="@+id/imgBtnBackActiveCourse"
+        android:id="@+id/imgBtnBackExploreCourses"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:src="@drawable/back_icon"
@@ -17,16 +17,15 @@
         android:tint="@color/colorWhite"
         android:layout_weight="1"/>
     <TextView
-        android:id="@+id/textCourseNameActiveCourse"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:textSize="18sp"
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
-        android:text="@string/course_name"
-        android:gravity="center"
-        android:layout_weight="7"
+        android:text="@string/explore"
+        android:gravity="center_vertical"
+        android:layout_weight="8"
         android:layout_gravity="center_vertical"
         android:maxLines="1" />
 </LinearLayout>
