--- a/app/src/main/res/layout/course_card.xml
+++ b/app/src/main/res/layout/course_card.xml
@@ -7,7 +7,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_horizontal"
     android:layout_margin="3dp"
-    android:theme="@style/AppTheme">
+    android:theme="@style/AppTheme"
+    android:padding="5dp">
     <androidx.cardview.widget.CardView
         android:id="@+id/courseCard"
         android:layout_width="150dp"
@@ -20,7 +21,7 @@
             android:layout_width="150dp"
             android:layout_height="120dp"
             android:scaleType="centerCrop"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"/>
     </androidx.cardview.widget.CardView>
     <TextView
         android:id="@+id/courseName"
@@ -29,8 +30,8 @@
         android:layout_below="@id/courseCard"
         android:layout_marginTop="5dp"
         android:text="@string/course_name"
-        android:textSize="12sp"
-        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:textSize="14sp"
         android:typeface="sans"
         android:layout_centerHorizontal="true"/>
 </RelativeLayout>
