--- a/app/src/main/res/layout/course_introductory_content_card.xml
+++ b/app/src/main/res/layout/course_introductory_content_card.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_horizontal"
@@ -12,14 +12,14 @@
     <androidx.cardview.widget.CardView
 
         android:id="@+id/courseIntroductoryCard"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         app:cardBackgroundColor="@color/colorLiteGrey"
         android:layout_height="160dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="12dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingTop="10dp"
@@ -27,6 +27,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxWidth="100dp"
+                android:maxHeight="100dp"
                 android:id="@+id/introductory_image"
                 tools:ignore="ContentDescription" />
             <!--<VideoView
