--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -10,5 +10,6 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/default_person_image"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:id="@+id/profilePhotoHeader"/>
 </RelativeLayout>
