design bug fixes

--- a/app/src/main/res/layout/activity_setup_2.xml
+++ b/app/src/main/res/layout/activity_setup_2.xml
@@ -38,8 +38,8 @@
         android:layout_marginStart="72dp"
         android:layout_marginEnd="72dp"
         android:hint="@string/enter_your_name"
-        android:textColorHint="@color/colorWhite"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorLiteGrey"
+        android:textColor="@color/colorWhite"
         android:gravity="center"
         android:layout_centerInParent="true"
         android:background="@drawable/text_view_login"
