--- a/app/src/main/res/layout/activity_setup_3.xml
+++ b/app/src/main/res/layout/activity_setup_3.xml
@@ -57,8 +57,8 @@
                 android:layout_marginStart="72dp"
                 android:layout_marginEnd="72dp"
                 android:hint="@string/enter_city"
-                android:textColorHint="@color/colorWhite"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColorHint="@color/colorLiteGrey"
+                android:textColor="@color/colorWhite"
                 android:gravity="center"
                 android:layout_centerInParent="true"
                 android:background="@drawable/text_view_login"
@@ -74,8 +74,8 @@
                 android:layout_marginStart="72dp"
                 android:layout_marginEnd="72dp"
                 android:hint="@string/enter_pincode"
-                android:textColorHint="@color/colorWhite"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColorHint="@color/colorLiteGrey"
+                android:textColor="@color/colorWhite"
                 android:gravity="center"
                 android:layout_centerInParent="true"
                 android:background="@drawable/text_view_login"
@@ -150,8 +150,8 @@
                 android:layout_marginStart="72dp"
                 android:layout_marginEnd="72dp"
                 android:hint="@string/enter_contact_number"
-                android:textColorHint="@color/colorWhite"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColorHint="@color/colorLiteGrey"
+                android:textColor="@color/colorWhite"
                 android:gravity="center"
                 android:layout_centerInParent="true"
                 android:background="@drawable/text_view_login"
