updated techers view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
                             android:layout_marginTop="5dp"
                             android:textSize="@dimen/text_margin"
                             android:textStyle="bold"
+                            android:textColor="@color/colorPrimary"
                             android:paddingVertical="5dp"
                             android:paddingHorizontal="10dp"
                             android:typeface="sans" />
@@ -78,6 +79,7 @@
                     android:text="@string/recommended_for_you"
                     android:textSize="@dimen/text_margin"
                     android:textStyle="bold"
+                    android:textColor="@color/colorPrimary"
                     android:paddingVertical="5dp"
                     android:paddingHorizontal="10dp"
                     android:typeface="sans"
@@ -97,12 +99,13 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/explore"
-                    android:textSize="@dimen/text_margin"
+                    android:textSize="24sp"
                     android:textStyle="bold"
+                    android:textColor="@color/colorPrimary"
                     android:paddingVertical="5dp"
                     android:paddingHorizontal="10dp"
                     android:typeface="sans"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="16dp"
                     android:layout_below="@id/recommendedCourseListView"
                     android:clickable="true"
                     android:focusable="true"
