--- a/app/src/main/res/layout/teachers_viewof_course_home.xml
+++ b/app/src/main/res/layout/teachers_viewof_course_home.xml
@@ -65,7 +65,7 @@
             android:background="@drawable/btn_blue"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/text_margin"
-            android:text="Schedule Class"
+            android:text="@string/schedule_class"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:paddingBottom="10dp"
@@ -118,7 +118,7 @@
             android:background="@drawable/btn_blue"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/text_margin"
-            android:text="Update Link"
+            android:text="@string/update_link"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:paddingBottom="10dp"
@@ -135,7 +135,8 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin">
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:visibility="gone">
             <ImageView
                 android:id="@+id/imgCourseImage"
                 android:layout_width="200dp"
@@ -216,6 +217,31 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
+        <view
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:id="@+id/divider"
+            android:layout_below="@id/btnUpdateLink"/>
+
+        <TextView
+            android:id="@+id/textRegisteredStudents"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/divider"
+            android:padding="10dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:textColor="@color/colorBlack"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:text="@string/list_of_registered_students"
+            android:typeface="sans"
+            android:gravity="center_vertical" />
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textRegisteredStudents"
+            android:layout_margin="@dimen/activity_horizontal_margin"/>
 
     </RelativeLayout>
 </ScrollView>
