--- a/app/src/main/res/layout/teachers_viewof_course_notifications.xml
+++ b/app/src/main/res/layout/teachers_viewof_course_notifications.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Following Text View and Recycler Views should bn displayed upon click on Notifications button -->
     <TextView
@@ -32,4 +32,17 @@
         android:background="@drawable/text_view_login"/>
     <!-- End DisplayOnClickingResourcesButton -->
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/add_icon"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:foregroundGravity="center"
+        android:tint="@color/colorWhite"
+        android:backgroundTint="@color/colorPrimary"
+        android:elevation="20dp"
+        android:id="@+id/btnAddNotification"
+        tools:ignore="ContentDescription" />
 </RelativeLayout>
