--- a/app/src/main/res/layout/teachers_viewof_course_schedule.xml
+++ b/app/src/main/res/layout/teachers_viewof_course_schedule.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/classScheduleTeacher"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"/>
