added terms and conditions page

--- a/app/src/main/res/menu/home_drawer_menu.xml
+++ b/app/src/main/res/menu/home_drawer_menu.xml
@@ -31,6 +31,9 @@
             <item
                 android:title="Contact us"
                 android:id="@+id/contactUs"/>
+            <item
+                android:title="@string/faq"
+                android:id="@+id/faq"/>
         </menu>
     </item>
 </menu>
