added scheduling activity for teachers in frontend

--- a/app/src/main/res/menu/registered_student_menu.xml
+++ b/app/src/main/res/menu/registered_student_menu.xml
@@ -14,6 +14,7 @@
             android:title="Settings"
             android:icon="@drawable/icon_settings_holo_dark"
             app:showAsAction="ifRoom"
+            android:visible="false"
             />
         <item
             android:id="@+id/menuItemReview"
