--- a/app/src/main/res/drawable/receiver_message_layout_forum.xml
+++ b/app/src/main/res/drawable/receiver_message_layout_forum.xml
@@ -97,10 +97,13 @@
             </shape>
         </rotate>
     </item>
-    <item android:left="8dp">
+    <item android:left="8dp"
+        android:right="-2dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorLiteGrey" />
-            <corners android:radius="8dp" />
+            <corners
+                android:bottomRightRadius="10dp"
+                android:bottomLeftRadius="4dp"/>
         </shape>
     </item>
 
