--- a/app/src/main/res/drawable/sender_message_layout_forum.xml
+++ b/app/src/main/res/drawable/sender_message_layout_forum.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--Shadow Layer-->
+    <!--Shadow Layer
 
     <item>
         <rotate
@@ -30,8 +30,6 @@
         </shape>
     </item>
 
-    <!--===============-->
-
     <item>
         <rotate
             android:fromDegrees="40"
@@ -53,7 +51,6 @@
         </shape>
     </item>
 
-    <!--===============-->
 
     <item>
         <rotate
@@ -80,10 +77,7 @@
                 android:right="1px" />
             <solid android:color="#10000000" />
         </shape>
-    </item>
-
-    <!--===============-->
-
+    </item>-->
 
     <!--ForeGround-->
 
@@ -94,14 +88,16 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="@color/colorAccent" />
+                <solid android:color="@color/colorAccent"/>
             </shape>
         </rotate>
     </item>
-    <item android:right="10dp">
+    <item android:right="10dp"
+        android:left="-2dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorAccent" />
-            <corners android:radius="4dp" />
+            <corners android:bottomRightRadius="4dp"
+                android:bottomLeftRadius="10dp"/>
         </shape>
     </item>
 
