added search ui to home page

--- a/app/src/main/res/layout/activity_setup_1.xml
+++ b/app/src/main/res/layout/activity_setup_1.xml
@@ -32,7 +32,7 @@
         android:id="@+id/textSetupTitle2"
         android:textColor="@color/colorWhite"/>
 
-    <SearchView
+    <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/text_view_add_course"
