--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,6 @@
                             android:text="@string/resume_learning"
                             android:layout_marginTop="5dp"
                             android:textSize="@dimen/text_margin"
-                            android:textStyle="bold"
                             android:textColor="@color/colorPrimary"
                             android:paddingVertical="5dp"
                             android:paddingHorizontal="10dp"
@@ -78,7 +77,6 @@
                     android:gravity="center_vertical"
                     android:text="@string/recommended_for_you"
                     android:textSize="@dimen/text_margin"
-                    android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
                     android:paddingVertical="5dp"
                     android:paddingHorizontal="10dp"
@@ -99,8 +97,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="@string/explore"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
+                    android:textSize="@dimen/text_margin"
                     android:textColor="@color/colorPrimary"
                     android:paddingVertical="5dp"
                     android:paddingHorizontal="10dp"
