--- a/app/src/main/res/layout/activity_active_course_forum.xml
+++ b/app/src/main/res/layout/activity_active_course_forum.xml
@@ -22,7 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:id="@+id/forum_progress_bar"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:progressTint="@color/colorPrimary"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/private_messages_list_of_users1"
         android:layout_width="match_parent"
@@ -39,7 +40,7 @@
         android:weightSum="100"
         android:layout_marginHorizontal="5dp"
         android:layout_marginVertical="5dp"
-        android:padding="5dp">
+        android:elevation="10dp">
 
         <ImageButton
             android:layout_width="match_parent"
@@ -62,11 +63,13 @@
             android:textColorHint="@color/colorGrey"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/text_margin"
-            android:typeface="monospace"
+            android:typeface="normal"
             android:paddingVertical="15dp"
             android:paddingHorizontal="5dp"
             android:maxLines="5"
-            android:layout_weight="10"/>
+            android:layout_weight="10"
+            android:importantForAutofill="no"
+            android:inputType="text" />
 
         <ImageButton
             android:layout_width="match_parent"
