--- a/app/src/main/res/layout/activity_explore_courses.xml
+++ b/app/src/main/res/layout/activity_explore_courses.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ProgressBar
@@ -19,5 +19,40 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:background="@drawable/text_view_login"/>
+        android:background="@drawable/text_view_login"
+        android:layout_above="@id/linearLayoutPageNumber"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/linearLayoutPageNumber"
+        android:orientation="horizontal"
+        android:visibility="gone">
+        <ImageButton
+            android:id="@+id/prevPage"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:src="@drawable/filled_left"
+            android:background="@color/transparent"
+            android:tint="@color/colorPrimary"
+            tools:ignore="ContentDescription" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="12"
+            android:layout_height="match_parent"
+            android:text="Page 1/5"
+            android:gravity="center"
+            android:textSize="@dimen/text_margin"
+            android:textColor="@color/colorPrimary"/>
+        <ImageButton
+            android:id="@+id/nextPage"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:src="@drawable/filled_next"
+            android:background="@color/transparent"
+            android:tint="@color/colorPrimary"
+            tools:ignore="ContentDescription" />
+    </LinearLayout>
 </RelativeLayout>
